* added validation to registration

--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -1,3 +1,7 @@
 app.title= Spring Boot Sample 
 app.footer = Created with love in Coders Lab
 hello.message= Witam {0}
+
+
+error.user.exists= Użytkownik o podanej nazwie już istnieje
+error.password= Podane hasła nie są jednakowe
